<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/activity_login"
    tools:context="com.example.samman.main.main.Login"
    android:background="#27b090">

    <EditText android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:background="@android:color/white"
        android:textSize="18sp"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/passwordField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </EditText>

    <Button android:id="@+id/RegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Not Yet Member ?Click here To Register"
        android:onClick="onButtonRegisterClick"
        android:background="@android:color/transparent"
        android:textColor="@android:color/background_dark"
        style="@style/Widget.AppCompat.Button"
        android:layout_marginBottom="34dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"></Button>

    <Button
        android:id="@+id/ForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forget Password"
        android:onClick="onButtonResetClick"
        android:background="@android:color/transparent"
        android:textColor="@android:color/black"
        android:textAllCaps="false"
        android:layout_above="@+id/RegisterBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></Button>

    <EditText android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@android:color/white"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></EditText>

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label"
        android:onClick="onButtonLoginClick"
        android:background="#ebeef0"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="normal|bold"
        android:layout_marginBottom="32dp"
        android:layout_above="@+id/ForgetPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></Button>
</RelativeLayout>
